# marzbanpp

./: .gitignore  CMakeLists.txt  README.md  msvc-debug-generate.bat  portfile.cmake  unix-debug-generate-use-clang-off.sh  unix-release-generate-use-clang-off.sh  unix-relwithdeb-generate-use-clang-off.sh  usage  vcpkg.json
cmake/: clang_options.cmake  install_config.cmake  install_rules.cmake  make_executable_sanitized_target.cmake  make_sanitized_target.cmake  make_shared_library_sanitized_target.cmake  make_static_library_sanitized_target.cmake  msvc_set_target_options.cmake  packaging.cmake
examples/: CMakeLists.txt  main.cpp  stdafx.h
include/marzbanpp/: api.h  api_decorator.h  iapi.h  marzbanpp.h  stdafx.h
include/marzbanpp/net/: http_client.h
include/marzbanpp/types/: admin.h  admin_token.h  exceptions.h  hosts.h  inbounds.h  user.h  users.h
projects/examples/: CMakeLists.txt  logger.cpp  logger.h  main.cpp
projects/marzbanpp/: CMakeLists.txt  api.cpp  api.h  finally.h
projects/marzbanpp/net/: http_client.cpp  http_client.h  http_headers.cpp  http_headers.h
projects/marzbanpp/types/: admin.h  admins.h  host.h  system.h  user_list.h  user_usage.h
src/: CMakeLists.txt  api.cpp  api_decorator.cpp  http_client.cpp  http_headers.cpp
